@@ -8,6 +8,9 @@ a.  Changes to bash_directory_completion_hook so that it's assigned to the
     name passed to opendir without modifying the directory name the user
     typed.
 
+b.  Fix bug in select builtin that caused it to not terminate correctly if
+    the read timed out due to $TMOUT.
+
 ------------------------------------------------------------------------------
 This document details the changes between this version, bash-4.2-rc1,
 and the previous version, bash-4.2-beta.
