@@ -980,7 +980,7 @@ There are a few incompatibilities between version 4.2 and previous
 versions.  They are detailed in the file COMPAT in the bash distribution.
 That file is not meant to be all-encompassing; send mail to
 bash-maintainers@gnu.org (or bug-bash@gnu.org if you would like
-community discussion) if if you find something that's not mentioned there.
+community discussion) if you find something that's not mentioned there.
 
 Section C:  Differences from other Unix shells
 
