@@ -396,77 +396,77 @@ Bash-4.2 contains the following new features (see the manual page for
 complete descriptions and the CHANGES and NEWS files in the bash-4.2
 distribution):
 
-a.  `exec -a foo' now sets $0 to `foo' in an executable shell script without a
+o   `exec -a foo' now sets $0 to `foo' in an executable shell script without a
     leading #!.
 
-b.  Subshells begun to execute command substitutions or run shell functions or
+o   Subshells begun to execute command substitutions or run shell functions or
     builtins in subshells do not reset trap strings until a new trap is
     specified.  This allows $(trap) to display the caller's traps and the
     trap strings to persist until a new trap is set.
 
-c.  `trap -p' will now show signals ignored at shell startup, though their
+o   `trap -p' will now show signals ignored at shell startup, though their
     disposition still cannot be modified.
 
-d.  $'...', echo, and printf understand \uXXXX and \UXXXXXXXX escape sequences.
+o   $'...', echo, and printf understand \uXXXX and \UXXXXXXXX escape sequences.
 
-e.  declare/typeset has a new `-g' option, which creates variables in the
+o   declare/typeset has a new `-g' option, which creates variables in the
     global scope even when run in a shell function.
 
-f.  test/[/[[ have a new -v variable unary operator, which returns success if
+o   test/[/[[ have a new -v variable unary operator, which returns success if
     `variable' has been set.
 
-g.  Posix parsing changes to allow `! time command' and multiple consecutive
+o   Posix parsing changes to allow `! time command' and multiple consecutive
     instances of `!' (which toggle) and `time' (which have no cumulative
     effect).
 
-h.  Posix change to allow `time' as a command by itself to print the elapsed
+o   Posix change to allow `time' as a command by itself to print the elapsed
     user, system, and real times for the shell and its children.
 
-j.  $((...)) is always parsed as an arithmetic expansion first, instead of as
+o   $((...)) is always parsed as an arithmetic expansion first, instead of as
     a potential nested command substitution, as Posix requires.
 
-k.  A new FUNCNEST variable to allow the user to control the maximum shell
+o   A new FUNCNEST variable to allow the user to control the maximum shell
     function nesting (recursive execution) level.
 
-l.  The mapfile builtin now supplies a third argument to the callback command:
+o   The mapfile builtin now supplies a third argument to the callback command:
     the line about to be assigned to the supplied array index.
 
-m.  The printf builtin has as new %(fmt)T specifier, which allows time values
+o   The printf builtin has as new %(fmt)T specifier, which allows time values
     to use strftime-like formatting.
 
-n.  There is a new `compat41' shell option.
+o   There is a new `compat41' shell option.
 
-o.  The cd builtin has a new Posix-mandated `-e' option.
+o   The cd builtin has a new Posix-mandated `-e' option.
 
-p.  Negative subscripts to indexed arrays, previously errors, now are treated
+o   Negative subscripts to indexed arrays, previously errors, now are treated
     as offsets from the maximum assigned index + 1.
 
-q.  Negative length specifications in the ${var:offset:length} expansion,
+o   Negative length specifications in the ${var:offset:length} expansion,
     previously errors, are now treated as offsets from the end of the variable.
 
-r.  Parsing change to allow `time -p --'.
+o   Parsing change to allow `time -p --'.
 
-s.  Posix-mode parsing change to not recognize `time' as a keyword if the
+o   Posix-mode parsing change to not recognize `time' as a keyword if the
     following token begins with a `-'.  This means no more Posix-mode
     `time -p'.  Posix interpretation 267.
 
-t.  There is a new `lastpipe' shell option that runs the last command of a
+o   There is a new `lastpipe' shell option that runs the last command of a
     pipeline in the current shell context.  The lastpipe option has no
     effect if job control is enabled.
 
-u.  History expansion no longer expands the `$!' variable expansion.
+o   History expansion no longer expands the `$!' variable expansion.
 
-v.  Posix mode shells no longer exit if a variable assignment error occurs
+o   Posix mode shells no longer exit if a variable assignment error occurs
     with an assignment preceding a command that is not a special builtin.
 
-w.  Non-interactive mode shells exit if -u is enabled an an attempt is made
+o   Non-interactive mode shells exit if -u is enabled an an attempt is made
     to use an unset variable with the % or # expansions, the `//', `^', or
     `,' expansions, or the parameter length expansion.
 
-x.  Posix-mode shells use the argument passed to `.' as-is if a $PATH search
+o   Posix-mode shells use the argument passed to `.' as-is if a $PATH search
     fails, effectively searching the current directory.  Posix-2008 change.
 
-A short feature history dating from Bash-2.0:
+A short feature history dating back to Bash-2.0:
 
 Bash-4.1 contained the following new features:
 
