@@ -8,8 +8,11 @@ a.  Changes to bash_directory_completion_hook so that it's assigned to the
     name passed to opendir without modifying the directory name the user
     typed.
 
-b.  Fix bug in select builtin that caused it to not terminate correctly if
+b.  Fixed bug in select builtin that caused it to not terminate correctly if
     the read timed out due to $TMOUT.
+
+c.  Fixed a problem that resulted in non-repeatable sequences of random
+    numbers when RANDOM=0.
 
 ------------------------------------------------------------------------------
 This document details the changes between this version, bash-4.2-rc1,
